Update a test to match new indexResponse.aliases() type.
Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>